--- a/Parking_Web/Web.csproj
+++ b/Parking_Web/Web.csproj
@@ -17,7 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Application\Application.csproj" />
-    <ProjectReference Include="..\Parking_Domain\Parking_Domain.csproj" />
+    <ProjectReference Include="..\Parking_Domain\Domain.csproj" />
   </ItemGroup>
 
 </Project>
