--- a/Parking_Domain/ParkingService.Domain.csproj
+++ b/Parking_Domain/ParkingService.Domain.csproj
@@ -5,7 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Application\Application.csproj" />
+    <Folder Include="Dtos\" />
+    <Folder Include="Extensions\" />
   </ItemGroup>
 
 </Project>
