--- a/Parking_Tests/ParkingService.Domain.Tests.csproj
+++ b/Parking_Tests/ParkingService.Domain.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Parking_Domain\Domain.csproj" />
+    <ProjectReference Include="..\Parking_Domain\ParkingService.Domain.csproj" />
   </ItemGroup>
 
 </Project>
